syntax = "proto3";

package zitadel.v1;

option go_package = "github.com/zitadel/zitadel/pkg/grpc/message";

message ErrorDetail {
  string id = 1;
  string message = 2;
}

message CredentialsCheckError {
  string id = 1;
  string message = 2;
  int32 failed_attempts = 3;
}

message LocalizedMessage {
  string key = 1;
  string localized_message = 2;
}
